[B]Version 1.1.90[/B]
Fix for keyword filter
Fuxmovies - new site
Erogarga - fix video playback and added Lookup info